menu last spacing fix

--- a/menu-styles.css
+++ b/menu-styles.css
@@ -32,7 +32,7 @@ a:not(#back) {
 	border-right: 0px solid;
 	border-color: var(--background1);
 	border-radius: 0px;
-	padding-left: calc(var(--spacing)*2);
+	padding-left: calc(var(--spacing)*1.5);
 	padding-top: calc(var(--spacing)/2);
 	padding-bottom: calc(var(--spacing)/2);
 	font-size: 22px;
